syntax = "proto3";

package shared.proto.messaging.v1;

// MLS (Messaging Layer Security) Protocol Messages
// RFC 9420 - Modern group messaging with E2EE
// Replaces Sender Key protocol for better security and scalability

// MLSMessage - Top-level MLS message wrapper
message MLSMessage {
  // Message type (determines which field is populated)
  oneof message {
    // Application message (encrypted group message)
    MLSApplicationMessage application = 1;

    // Proposal message (suggest group change)
    MLSProposal proposal = 2;

    // Commit message (apply group changes)
    MLSCommit commit = 3;

    // Welcome message (invite new member)
    MLSWelcome welcome = 4;

    // Key package (member's public keys)
    MLSKeyPackage key_package = 5;

    // Group info (public group metadata)
    MLSGroupInfo group_info = 6;
  }

  // Reserved for future MLS message types
  reserved 7 to 20;
}

// MLSApplicationMessage - Encrypted group message
message MLSApplicationMessage {
  // Group ID (unique group identifier)
  bytes group_id = 1;

  // Epoch (increments on membership changes)
  uint64 epoch = 2;

  // Content type (what's inside encrypted_content)
  MLSContentType content_type = 3;

  // Encrypted application data
  // Decrypts to MessageContent proto
  bytes encrypted_content = 4;

  // Authenticated data (not encrypted, but authenticated)
  // Can contain: message_id, timestamp, etc.
  optional bytes authenticated_data = 5;

  // Sender (leaf index in group tree)
  uint32 sender = 6;

  // Reserved for future features
  reserved 7 to 15;
}

// MLSContentType - Type of application content
enum MLSContentType {
  // Unscpecified content (must be 0)
  MLS_CONTENT_TYPE_UNSPECIFIED = 0;

  // Regular text/media message
  MLS_CONTENT_TYPE_MESSAGE = 1;

  // Delivery receipt
  MLS_CONTENT_TYPE_RECEIPT = 2;

  // Reaction
  MLS_CONTENT_TYPE_REACTION = 3;

  // Custom application data
  MLS_CONTENT_TYPE_CUSTOM = 10;

  // Reserved for future types
  reserved 5 to 9, 11 to 20;
}

// MLSProposal - Propose group membership change
message MLSProposal {
  // Proposal type (determines which field is populated)
  MLSProposalType type = 1;

  // Specific proposal data
  oneof proposal {
    // Add new member to group
    MLSAddProposal add = 2;

    // Remove member from group
    MLSRemoveProposal remove = 3;

    // Update own leaf key package
    MLSUpdateProposal update = 4;

    // Pre-shared key (PSK) proposal
    MLSPSKProposal psk = 5;

    // Re-initialize group (change cipher suite)
    MLSReinitProposal reinit = 6;

    // External init (join via external commit)
    MLSExternalInitProposal external_init = 7;

    // Group context extensions
    MLSGroupContextExtensionsProposal extensions = 8;
  }

  // Reserved for future proposal types
  reserved 9 to 20;
}

// MLSProposalType - Type of group change proposal
enum MLSProposalType {
  // Unscpecified proposal (must be 0)
  MLS_PROPOSAL_TYPE_UNSPECIFIED = 0;

  // Add member
  MLS_PROPOSAL_TYPE_ADD = 1;

  // Remove member
  MLS_PROPOSAL_TYPE_REMOVE = 2;

  // Update self
  MLS_PROPOSAL_TYPE_UPDATE = 3;

  // Pre-shared key
  MLS_PROPOSAL_TYPE_PSK = 4;

  // Re-init group
  MLS_PROPOSAL_TYPE_REINIT = 5;

  // External init
  MLS_PROPOSAL_TYPE_EXTERNAL_INIT = 6;

  // Group extensions
  MLS_PROPOSAL_TYPE_EXTENSIONS = 7;

  // Reserved for future types
  reserved 8 to 20;
}

// MLSAddProposal - Add new member to group
message MLSAddProposal {
  // New member's key package
  bytes key_package = 1;

  // Reserved for future features
  reserved 2 to 10;
}

// MLSRemoveProposal - Remove member from group
message MLSRemoveProposal {
  // Removed member's leaf index
  uint32 removed = 1;

  // Reason for removal (optional)
  optional string reason = 2;

  // Reserved for future features
  reserved 3 to 10;
}

// MLSUpdateProposal - Update own key package
message MLSUpdateProposal {
  // New leaf key package
  bytes key_package = 1;

  // Reserved for future features
  reserved 2 to 10;
}

// MLSPSKProposal - Pre-shared key proposal
message MLSPSKProposal {
  // PSK ID
  bytes psk_id = 1;

  // Reserved for future features
  reserved 2 to 10;
}

// MLSReinitProposal - Re-initialize group with new parameters
message MLSReinitProposal {
  // New group ID
  bytes group_id = 1;

  // New protocol version
  uint32 version = 2;

  // New cipher suite
  uint32 cipher_suite = 3;

  // Reserved for future features
  reserved 4 to 10;
}

// MLSExternalInitProposal - External join proposal
message MLSExternalInitProposal {
  // KEM output (key encapsulation)
  bytes kem_output = 1;

  // Reserved for future features
  reserved 2 to 10;
}

// MLSGroupContextExtensionsProposal - Update group extensions
message MLSGroupContextExtensionsProposal {
  // New extensions (opaque MLS extension data)
  bytes extensions = 1;

  // Reserved for future features
  reserved 2 to 10;
}

// MLSCommit - Apply proposals to group state
message MLSCommit {
  // MLS Commit message (binary MLS format)
  // Contains: proposals, path secrets, confirmation tag
  bytes commit = 1;

  // Group ID
  bytes group_id = 2;

  // Old epoch (before commit)
  uint64 old_epoch = 3;

  // New epoch (after commit)
  uint64 new_epoch = 4;

  // Proposals included in this commit
  // References to proposal messages by hash
  repeated MLSProposal proposals = 5;

  // CRITICAL: Requires immediate processing?
  // Set to true for critical updates (member removal, re-init)
  // Clients should process these before queued messages
  bool requires_immediate_processing = 6;

  // Reason for critical flag (if set)
  // Examples: "member_removed", "group_reinit", "security_update"
  optional string critical_reason = 7;

  // Confirmation tag (MAC of group state)
  // Proves all members have same group state
  bytes confirmation_tag = 8;

  // Reserved for future features
  reserved 9 to 20;
}

// MLSWelcome - Invite new member to group
message MLSWelcome {
  // MLS Welcome message (binary MLS format)
  // Contains: encrypted group secrets, ratchet tree
  bytes welcome = 1;

  // Group ID
  bytes group_id = 2;

  // Current epoch
  uint64 epoch = 3;

  // Encrypted group info
  // Decrypts to group metadata (members, capabilities, etc.)
  bytes encrypted_group_info = 4;

  // Reserved for future features
  reserved 5 to 15;
}

// MLSKeyPackage - Member's public key package
message MLSKeyPackage {
  // MLS KeyPackage (binary MLS format)
  // Contains: identity, credentials, init key, signature
  bytes key_package = 1;

  // User ID
  string user_id = 2;

  // Device ID
  string device_id = 3;

  // Cipher suite
  uint32 cipher_suite = 4;

  // Creation timestamp
  int64 created_at = 5;

  // Expiration timestamp
  int64 expires_at = 6;

  // Reserved for future features
  reserved 7 to 15;
}

// MLSGroupInfo - Public group metadata
message MLSGroupInfo {
  // MLS GroupInfo (binary MLS format)
  // Contains: group ID, epoch, ratchet tree, extensions
  bytes group_info = 1;

  // Group ID
  bytes group_id = 2;

  // Current epoch
  uint64 epoch = 3;

  // Group size (member count)
  uint32 size = 4;

  // Cipher suite
  uint32 cipher_suite = 5;

  // Reserved for future features
  reserved 6 to 15;
}

// GroupMessageId - Unique message ID for group messages
// Prevents ID conflicts in multi-sender groups
message GroupMessageId {
  // Group ID
  bytes group_id = 1;

  // MLS epoch (increments on membership changes)
  uint64 epoch = 2;

  // Sender index in group roster (leaf index)
  uint32 sender_index = 3;

  // Generation number (sequential per sender in epoch)
  // Sender's message counter within current epoch
  uint64 generation = 4;

  // Composite ID (computed, not transmitted)
  // Format: "group_id:epoch:sender:generation"
  // Example: "abc123:5:2:42"

  // Reserved for future features
  reserved 5 to 10;
}

// MLSCipherSuite - Supported MLS cipher suites
enum MLSCipherSuite {
  // Unscpecified cipher suite (must be 0)
  MLS_CIPHER_SUITE_UNSPECIFIED = 0;

  // MLS_128_DHKEMX25519_AES128GCM_SHA256_Ed25519
  MLS_CIPHER_SUITE_128_X25519_AES128 = 1;

  // MLS_128_DHKEMX25519_CHACHA20POLY1305_SHA256_Ed25519
  MLS_CIPHER_SUITE_128_X25519_CHACHA20 = 2;

  // Future: Post-Quantum cipher suites
  // MLS_256_DHKEMX448_AES256GCM_SHA512_Ed448
  MLS_CIPHER_SUITE_256_X448_AES256 = 10;

  // Reserved for future suites
  reserved 3 to 9, 11 to 20;
}
